fixed white space

--- a/hardle_js/src/App.css
+++ b/hardle_js/src/App.css
@@ -5,6 +5,7 @@
   height: 100vh;
   /* display: flex; */
   color: white;
+  overflow-y: auto;
 }
 
 body {
